# project-oracle

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-03-15-project-oracle-design.md
docs/superpowers/plans/: 2026-03-16-project-oracle.md
features/: command_caching.feature  environment.py  file_caching.feature  git_state.feature  natural_language.feature
features/steps/: ask_steps.py  command_steps.py  file_steps.py  git_steps.py
hooks/: lights-on-oracle-post.sh  lights-on-oracle-pre.sh
src/oracle/: __init__.py  formatting.py  ingest.py  ingest_bridge.py  intent.py  project.py  registry.py  server.py  telemetry.py  watcher.py
src/oracle/cache/: command_cache.py  file_cache.py  git_cache.py
src/oracle/integrations/: chunkhound.py  git.py
src/oracle/storage/: store.py
src/oracle/tools/: ask.py  forget.py  grep.py  read.py  run.py  stats.py  (+1 more)
tests/: conftest.py  test_ask.py  test_benchmark.py  test_bug_hunt.py  test_bug_hunt_r2.py  test_bug_hunt_r3.py  test_characterization.py  test_chunkhound.py  test_command_cache.py  test_concurrent.py  test_contract.py  test_file_cache.py  test_file_cache_properties.py  test_forget.py  test_git_cache.py  test_grep.py  test_ingest.py  test_ingest_bridge.py  test_ingest_fuzz.py  test_integration.py  test_intent.py  test_project.py  test_read.py  test_registry.py  test_run.py  test_server.py  test_stats.py  test_status.py  test_store.py  test_store_adoption.py  test_telemetry.py  test_watcher.py
